# DjangoStartKit

./: .env.template  .gitignore  Makefile  README.md  env.template  main.py  manage.py  pyproject.toml  server.py  start.sh
.devcontainer/: devcontainer.json
DjangoStartKit/: asgi.py  middlewares.py  settings.py  urls.py  wsgi.py
apis/: permissions.py  responses.py
apis/account/: apps.py  schemas.py  serializers.py  tests.py  urls.py  views.py
apis/auth/: apps.py  schemas.py  serializers.py  urls.py  views.py
apis/chat/: apps.py  serializers.py  urls.py  views.py
apis/chat/consumers/: consumers.py  db_operations.py  decorator.py  handler.py  mixins.py
apis/chat/consumers/defines/: channels_message.py  client_schema.py  device.py  exceptions.py  message_content.py  message_type.py  reply.py  service.py
apis/chat/templates/: index.html
apis/info/: apps.py  schemas.py  urls.py  views.py
apps/: enums.py  permissions.py  responses.py  schemas.py
apps/account/: admin.py  apps.py  models.py  schemas.py  serializers.py  tests.py  urls.py  views.py
apps/auth/: schemas.py  serializers.py  urls.py  views.py
apps/chat/: consumers.py  models.py  serializers.py  urls.py  views.py
apps/chat/consumers/: consumers.py  db_operations.py  decorator.py  defines.py  handler.py  mixins.py  schema.py
apps/chat/consumers/defines/: __init__.py  channels_message.py  chat_type.py  client_schema.py  exceptions.py  message_content.py  message_type.py  reply.py  service.py
apps/chat/templates/: chat_online.html  index.html  room.html
apps/info/: models.py  schemas.py  urls.py  views.py
command/: __init__.py  mysql.py  redis.py  tasks.py  tools.py
common/: decorators.py  encrypt.py  k8s_api.py  messages.py  schemas.py  signed_request.py  swagger.py  types.py  utils.py  validators.py
common/django/: paths.py  perms.py  urls.py
common/drf/: __init__.py  decorators.py  filters.py  mixins.py  serializers.py  viewset.py
conf/: config.py  config_consul.py  config_pydantic.py  enums.py
conf/content/: consul_template.json  default_template.json  template.yaml
conf/envs/: env.template  template.yaml
conf/gunicorn/: config.py  logging.conf
core/: asgi.py  authenticate.py  exceptions.py  main.py  middlewares.py  onstart.py  run.py  settings.py  urls.py
core/restful/: __init__.py
deploy/docker/: Dockerfile  back-end-base.Dockerfile  back-end.Dockerfile  dev-back-end.Dockerfile  docker-compose.yml
deploy/microService/: base-compose.yml
scripts/: api_perm_update_or_create.py  django_setup.py
storages/: __init__.py  enums.py
storages/hbase/: __init__.py  models.py
storages/hologres/: __init__.py
storages/mysql/: __init__.py  admin.py  apps.py  base.py  validators.py
storages/mysql/management/commands/: generate-api-perms.py  mysql.py  redis.py  serverstart.py  tasks.py  (+1 more)
storages/mysql/models/: __init__.py  account.py  chat.py  info.py  third_service.py
storages/oss/: __init__.py
storages/redis/: __init__.py  keys.py  redis_serach.py
storages/redis/search/: __init__py  base.py
storages/relational/: admin.py  apps.py  base.py  validators.py
storages/relational/migrations/: 0001_initial.py
storages/relational/models/: __init__.py  account.py  chat.py  info.py  third_service.py
tasks/: __init__.py
tasks/async/export/: __init__.py
tasks/yaml_template/: cronjob_template.yaml  job_template.yaml
third_apis/: __init__.py
(+6 files in other folders)
