[tool.poetry]
name = "DjangoStartKit"
version = "0.1.0"
description = "Django Start Kit"
authors = ["phoenix <hypofiasco@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
mysqlclient = "2.0.3"
python-dotenv = "^0.12.0"
redis = "3.5.3"
happybase = "1.2.0"
ujson = "^2.0"
httpx = "0.18.1"
requests = "^2.25.1"
pycryptodomex = "3.10.1"
pyopenssl = "20.0.1"
passlib = "^1.7"
email-validator = "^1.0.5"
fabric3 = "1.14.post1"
django = "3.2.9"
djangorestframework = "3.12.4"
django-filter = "21.1"
drf-yasg = "1.20.0"
django-cors-headers = "3.10.0"
pydantic = "1.8.2"
djangorestframework-jwt = "1.11.0"
django-simple-captcha = "0.5.14"
typer = "0.3.2"

[tool.poetry.dev-dependencies]
taskipy = "1.8.1"
bandit = "1.7.0"
black = "19.10b0"
flake8 = "3.9.1"
isort = "5.1.4"
pytest = "6.2.4"

[[tool.poetry.source]]
name = "aliyun"
default = true
url = "https://mirrors.aliyun.com/pypi/simple/"

[build-system]
requires = ["poetry>=1.1.6"]
build-backend = "poetry.masonry.api"

