[tool.poetry]
name = "DjangoStartKit"
version = "0.1.0"
description = "Django Start Kit"
authors = ["phoenix <hypofiasco@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
mysqlclient = "2.0.3"
python-dotenv = "^0.12.0"
redis = "3.5.3"
happybase = "1.2.0"
ujson = "^2.0"
httpx = "0.18.1"
requests = "^2.25.1"
pycryptodomex = "3.10.1"
pyopenssl = "20.0.1"
passlib = "^1.7"
email-validator = "^1.0.5"
fabric3 = "1.14.post1"
django = "3.2.9"
djangorestframework = "3.12.4"
django-filter = "21.1"
drf-yasg = "1.20.0"
django-cors-headers = "3.10.0"
pydantic = "1.8.2"
djangorestframework-jwt = "1.11.0"
django-simple-captcha = "0.5.14"
typer = "0.3.2"
pypinyin = "0.40.0"
redisearch = "2.1.1"
cachetools = "4.2.4"

[[tool.poetry.source]]
name = "aliyun"
default = true
url = "https://mirrors.aliyun.com/pypi/simple/"

# If poetry install failed, excute follow shell command
# shell
# >>> poetry cache clear . --all
# >>> rm poetry.lock
# >>> poetry install
